--- a/Docs/Paper/LaTex/template.tex
+++ b/Docs/Paper/LaTex/template.tex
@@ -700,139 +700,139 @@ Finally, there is an issue about $150$ nodes problem, since it seems to be the l
 
 %1
 \bibitem{Arato2003}
-Arat\'o, P., Juh\'asz, S., Mann, Z.A., Orb\'an, A., Papp, D. (2003), ``{Hardware/software partitioning in embedded system design. In: Proceedings of the International Symposium of Intelligent Signal Processing},'' pp. 192-202.
+Arat\'o, P., Juh\'asz, S., Mann, Z.A., Orb\'an, A., Papp, D. (2003), ``{Hardware/software partitioning in embedded system design. In: Proc. of the Intl. Symposium of Intelligent Signal Processing},'' pp. 192--202.
 
 %2
 \bibitem{Mann2007}
-Mann, Z.A., Orb\'an, A., Arat\'o, P., ``{Finding optimal hardware/software partitions. In: Formal Methods in System Design, vol. 31},'' {\em Springer}, pp. 241-263.
+Mann, Z.A., Orb\'an, A., Arat\'o, P., ``{Finding optimal hardware/software partitions. In: Formal Methods in System Design},'' v. 31, n. 3 pp. 241--263.
 
 %3
 \bibitem{Baier2008}
-Baier, C., Katoen, J-P (2008), ``{Principles of Model Checking. The MIT Press, London}''.
+Baier, C., Katoen, J-P (2008), ``{Principles of Model Checking}'', The MIT Press, London.
 
 %4
 \bibitem{Clarke2009}
-Clarke, E., Emerson, E., Sifakis, J. (2009), ``{Model checking: algorithmic verification and debugging. In: Communications of the Association Computing Machinery (ACM), vol. 52, i. 11},'' pp. 74-84.
+Clarke, E., Emerson, E., Sifakis, J. (2009), ``{Model checking: algorithmic verification and debugging. In: Communications of the Association Computing Machinery},'' v. 52, n. 11, pp. 74--84.
 
 %5
 \bibitem{Trindade2015}
-Trindade, A., Cordeiro. L. (2015), ``{Applying SMT-based verification to hardware/software partitioning in embedded systems. In: Design Automation for Embedded Systems. Springer, New York.}''
+Trindade, A., Cordeiro. L. (2015), ``{Applying SMT-based verification to hardware/software partitioning in embedded systems. In: Design Automation for Embedded Systems (to appear).}''
 
 %6
 \bibitem{Trindade2014}
-Trindade, A., Cordeiro, L. (2014), ``{Aplicando Verificação de Modelos para o Particionamento de Hardware/Software. In: Brazilian Symposium on Computing Systems Engineering (SBESC)},'' pp. 1-6.
+Trindade, A., Cordeiro, L. (2014), ``{Aplicando Verificação de Modelos para o Particionamento de Hardware/Software. In: Brazilian Symposium on Computing Systems Engineering (SBESC)},'' pp. 1--6.
 
 %7
 \bibitem{Wu2014}
-Wu, M., Wu, W., Tai, N., Zhao, H., Fan, J., Yuan, N. (2014), ``{Research on OpenMP model of the parallel programming technology for homogeneous multicore DSP. In: International Conference on Software Engineering and Service Science (ICSESS)},'' pp. 921,924.
+Wu, M., Wu, W., Tai, N., Zhao, H., Fan, J., Yuan, N. (2014), ``{Research on OpenMP model of the parallel programming technology for homogeneous multicore DSP. In: Proc. of the Intl. Conference on Software Engineering and Service Science},'' pp. 921--924.
 
 %8
 \bibitem{Tang2009}
-Tang, T., Lin, Y., Ren, X. (2010), ``{Mapping OpenMP concepts to the stream programming model. In: Int. Conference on Computer Science Education (ICCSE)},'' pp. 1900-1905.
+Tang, T., Lin, Y., Ren, X. (2010), ``{Mapping OpenMP concepts to the stream programming model. In: Proc. Intl. Conference on Computer Science Education (ICCSE)},'' pp. 1900--1905.
 
 %9
 \bibitem{Rao2009}
-Rao, S. (2009), ``{Engineering Optimization: Theory and Practice. 4th edition. John Wiley \& Sons, Hoboken}''.
+Rao, S. (2009), ``{Engineering Optimization: Theory and Practice. 4th edition}'', John Wiley \& Sons, Hoboken.
 
 %10
 \bibitem{Biere2009}
-Biere, A. (2009), ``{Bounded model checking. In: Biere, A., Heule, M., van Marren, H., Walsh, T. (org.) Handbook of Satisfiability, IOS Press, pp. 457–481.}''
+Biere, A. (2009), ``{Bounded model checking. In: Biere, A., Heule, M., van Marren, H., Walsh, T. (org.)}'', Handbook of Satisfiability, IOS Press, pp. 457–-481.
 
 %11
 \bibitem{Clarke2004}
-Clarke, E., Kroening, D., Lerda, F. (2004), ``{A Tool for Checking ANSI-C Programs. In: Proceedings of the Tools and Algorithms for the Construction and Analysis of Systems (TACAS), LNCS 2988}'', pp. 168-176.
+Clarke, E., Kroening, D., Lerda, F. (2004), ``{A Tool for Checking ANSI-C Programs. In: Proc. of the Tools and Algorithms for the Construction and Analysis of Systems}'', LNCS 2988, pp. 168--176.
 
 %12
 \bibitem{Armando2009}
-Armando, A., Mantovani, J., Platania, L. (2009), ``{Bounded model checking of software using SMT solvers instead of SAT solvers. In: International Journal on Software Tools for Technology Transfer, Vol. 11, n. 1},'' pp. 69-83.
+Armando, A., Mantovani, J., Platania, L. (2009), ``{Bounded model checking of software using SMT solvers instead of SAT solvers. In: International Journal on Software Tools for Technology Transfer},'' v. 11, n. 1, pp. 69--83.
 
 %13
 \bibitem{Ganai2006}
-Ganai, M., Gupta, A. (2006), ``{Accelerating high-level bounded model checking. In: Proceedings of the IEEE/ACM International Conference on Computer-Aided Design},'' pp. 794–801.
+Ganai, M., Gupta, A. (2006), ``{Accelerating high-level bounded model checking. In: Proc. of the IEEE/ACM International Conference on Computer-Aided Design},'' pp. 794-–801.
 
 %14
 \bibitem{Cordeiro2012}
-Cordeiro, L., Fischer, B., Marques-Silva, J. (2012), ``{SMT-based bounded model checking for embedded ANSI-C software. In: IEEE Transactions on Software Engineering, vol. 38, ed. 4},'' pp. 957-974.
+Cordeiro, L., Fischer, B., Marques-Silva, J. (2012), ``{SMT-based bounded model checking for embedded ANSI-C software. In: IEEE Transactions on Software Engineering},'' v. 38, n. 4, pp. 957--974.
 
 %15
 \bibitem{Cordeiro2011}
-Cordeiro, L., Fischer, B. (2011), ``{Verifying multi-threaded software using SMT-based context-bounded model checking. In: Proceedings of the 33rd International Conference on Software Engineering},'' pp. 331-340.
+Cordeiro, L., Fischer, B. (2011), ``{Verifying multi-threaded software using SMT-based context-bounded model checking. In: Proceedings of the 33rd International Conference on Software Engineering},'' pp. 331--340.
 
 %16
 \bibitem{Ramalho2013}
-Ramalho, M., Freitas, M., Souza, F., Marques, H., Cordeiro, L. (2013), ``{SMT-Based Bounded Model Checking of C++ Programs. In: International Conference and Workshops on the Engineering of Computer-Based Systems},'' pp. 147-156.
+Ramalho, M., Freitas, M., Souza, F., Marques, H., Cordeiro, L. (2013), ``{SMT-Based Bounded Model Checking of C++ Programs. In: International Conference and Workshops on the Engineering of Computer-Based Systems},'' pp. 147--156.
 
 %17
 \bibitem{Teich2012}
-Teich, J. (2012), ``{Hardware/Software Codesign: The Past, the Present, and Predicting the Future. In: Proceedings of the IEEE, vol. 100},'' pp. 1411-1430.
+Teich, J. (2012), ``{Hardware/Software Codesign: The Past, the Present, and Predicting the Future. In: Proc. of the IEEE, Special Centennial Issue},''  v. 100, pp. 1411--1430.
 
 %18
 \bibitem{TheMathWorks2013}
-The MathWorks, Inc. (2013), ``{MATLAB (version R2013a). Natick, MA}''.
+The MathWorks, Inc. (2013), ``{MATLAB (version R2013a)}'', Natick, MA.
 
 %19
 \bibitem{Tranquillo2011}
-Tranquillo, J. (2011), ``{Matlab for Engineering and the Life Sciences. Synthesis Lectures on Engineering. Morgan \& Claypool}''.
+Tranquillo, J. (2011), ``{Matlab for Engineering and the Life Sciences}'', Synthesis Lectures on Engineering. Morgan \& Claypool.
 
 %20
 \bibitem{Hong2010}
-Hong, L., Cai, J. (2010), ``{The application guide of mixed programming between MATLAB and other programming languages. In: Proceedings of the 2nd International Conference on Computer and Automation Engineering (ICCAE)},'' pp. 185-189.
+Hong, L., Cai, J. (2010), ``{The application guide of mixed programming between MATLAB and other programming languages. In: Proc. of the 2nd Intl. Conference on Computer and Automation Engineering},'' pp. 185--189.
 
 %21
 \bibitem{Guthaus2001}
-Guthaus, M., Ringenberg, J., Ernst, D., Austin, T., Mudge, T., Brown, R. (2001), ``{MiBench: a free, commercially representative embedded benchmark suite. In: Proceedings of the IEEE 4th annual workshop on workload characterization},'' pp. 3-14.
+Guthaus, M., Ringenberg, J., Ernst, D., Austin, T., Mudge, T., Brown, R. (2001), ``{MiBench: a free, commercially representative embedded benchmark suite. In: Proc. of the IEEE 4th annual workshop on workload characterization},'' pp. 3--14.
 
 %22
 \bibitem{Arato2005}
-Arat\'o, P., Mann, Z.A., Orb\'an, A. (2005), ``{Algorithmic aspects of hardware/software partitioning. In: Association Computing Machinery Transactions on Design Automation of Electronic Systems, vol. 1},'' pp. 136–156.
+Arat\'o, P., Mann, Z.A., Orb\'an, A. (2005), ``{Algorithmic aspects of hardware/software partitioning. In: Association Computing Machinery Transactions on Design Automation of Electronic Systems},'' v. 1, pp. 136–-156.
 
 %23
 \bibitem{Dagum1998}
-Dagum, L., Menon, R. (1998), ``{OpenMP: an industry-standard API for shared-memory programming. In: Computational Science \& Engineering, vol. 5, issue 1},'' pp. 46-55.
+Dagum, L., Menon, R. (1998), ``{OpenMP: an industry-standard API for shared-memory programming.},'' In: Computational Science \& Engineering, v. 5, n. 1, pp. 46--55.
 
 %24
 \bibitem{DeMoura2008}
-De Moura, L., Bjorner, N. (2008), ``{Z3: An Efficient SMT Solver. In: Tools and Algorithms for the Construction and Analysis of Systems (TACAS), LNCS 4963},'' pp. 337–340.
+De Moura, L., Bjorner, N. (2008), ``{Z3: An Efficient SMT Solver. In: Tools and Algorithms for the Construction and Analysis of Systems},'' LNCS 4963, pp. 337–-340.
 
 %25
 \bibitem{Brummayer2009}
-Brummayer, R., Biere, A. (2009), ``{Boolector: An Efficient SMT Solver for Bit-Vectors and Arrays. In: Tools and Algorithms for the Construction and Analysis of Systems (TACAS), LNCS 5505},'' pp. 174–177.
+Brummayer, R., Biere, A. (2009), ``{Boolector: An Efficient SMT Solver for Bit-Vectors and Arrays. In: Tools and Algorithms for the Construction and Analysis of Systems},'' LNCS 5505, pp. 174-–177.
 
 %26
 \bibitem{Barrett2011}
-Barrett, C., Conway, C. Deters, M., Hadarean, L., Jovanovic, D., King, T., Reynolds, A., Tinelli, C. (2011), ``{CVC4. In: Computer-Aided Verification (CAV), LNCS 6806},'' pp. 171-177.
+Barrett, C., Conway, C. Deters, M., Hadarean, L., Jovanovic, D., King, T., Reynolds, A., Tinelli, C. (2011), ``{CVC4. In: Computer-Aided Verification},'' LNCS 6806, pp. 171--177.
 
 %27
 \bibitem{Bozzano2005}
-Bozzano, M., Bruttomesso, R., Cimatti, A., Junttila, T., Rossum, P., Schulz, S., Sebastiani, R. (2005), ``{MathSAT: Tight integration of SAT and mathematical decision procedures. In: Journal of Automated Reasoning.}''
+Bozzano, M., Bruttomesso, R., Cimatti, A., Junttila, T., Rossum, P., Schulz, S., Sebastiani, R. (2005), ``{MathSAT: Tight integration of SAT and mathematical decision procedures},'' In: Journal of Automated Reasoning, v. 35, n. 1-3, pp. 265--293.
 
 %28
 \bibitem{Dutertre2014}
-Dutertre, B. (2014), ``{Yices 2.2. In: Computer-Aided Verification (CAV), LNCS 8559},'' pp. 737–744.
+Dutertre, B. (2014), ``{Yices 2.2. In: Computer-Aided Verification (CAV)},'' LNCS 8559, pp. 737–-744.
 
 %29
 \bibitem{Holzmann2011}
-Holzmann, G.J., Joshi, R., Groce, A. (2011), ``{Swarm Verification Techniques. In: IEEE Transactions on Software Engineering, vol. 37, issue 6},'' pp. 845, 857.
+Holzmann, G.J., Joshi, R., Groce, A. (2011), ``{Swarm Verification Techniques},'' In: IEEE Transactions on Software Engineering, v. 37, n. 6, pp. 845--857.
 
 %30
 \bibitem{Holzmann2012}
-Holzmann, G. (2012), ``{Parallelizing the spin model checker. In: Proceedings of the 19th International Conference on Model Checking Software (SPIN 2012), LNCS 7385},'' pp. 155-171.
+Holzmann, G. (2012), ``{Parallelizing the spin model checker. In: Proc. of the 19th Intl. Conference on Model Checking Software},'' LNCS 7385, pp. 155--171.
 
 %31
 \bibitem{Wintersteiger2009}
-Wintersteiger, C., Hamadi, Y., De Moura, L. (2009), ``{A Concurrent Portfolio Approach to SMT Solving. In: International Conference on Computer-Aided Verification (CAV), LNCS 5643},'' pp. 715-720.
+Wintersteiger, C., Hamadi, Y., De Moura, L. (2009), ``{A Concurrent Portfolio Approach to SMT Solving.},'' In: Proc. of the Intl. Conference on Computer-Aided Verification, LNCS 5643, pp. 715--720.
 
 %32
 \bibitem{Bjorner2015}
-Bjorner, N., Phan, A-D., Fleckenstein, L. (2015), ``{vZ - An Optimizing SMT Solver. In: International Conference on Tools and Algorithms for the Construction and Analysis of Systems (TACAS), LNCS 9035},'' pp. 194-199.
+Bjorner, N., Phan, A-D., Fleckenstein, L. (2015), ``{vZ - An Optimizing SMT Solver},'' In: Proc. of the International Conference on Tools and Algorithms for the Construction and Analysis of Systems, LNCS 9035, pp. 194--199.
 
 %33
 \bibitem{Qawasmeh2014}
-Qawasmeh, A., Malik, A., Chapman, B. (2014), ``{OpenMP task scheduling analysis via OpenMP runtime API and tool visualization. In: Parallel \& Distributed processing symposium work-shop (IPDPSW), 2014 IEEE International},'' pp. 1049-1058.
+Qawasmeh, A., Malik, A., Chapman, B. (2014), ``{OpenMP task scheduling analysis via OpenMP runtime API and tool visualization.},'' In: Proc. of the Intl. Parallel \& Distributed processing symposium workshop, pp. 1049--1058.
 
 %34
 \bibitem{Bjorner2014}
-Bjorner, N. and Phan, A. D. (2014), ``{vZ - Maximal Satisfaction with Z3. 6th International Symposium on Symbolic Computation in Software Science (SCSS).}''
+Bjorner, N. and Phan, A. D. (2014), ``{vZ - Maximal Satisfaction with Z3},'' In: Prof. of the 6th Intl. Symposium on Symbolic Computation in Software Science, pp. 1--10.
 
 %35
 \bibitem{OpenMP1998}
@@ -843,20 +843,20 @@ http://www.openmp.org
 %36
 \bibitem{Z3API}
 Magellan, ``{Source code and documentation},''
-  \url{https://github.com/Z3Prover/z3}, Accessed 18 August 2015.
+  \url{https://github.com/Z3Prover/z3}, Accessed 18th August 2015.
   
 %37
 \bibitem{GA}
 URFJ, ``{Algoritmos Genéticos: Fundamentos e Aplicações. Marcio Nunes de Miranda},''
-  \url{http://www.nce.ufrj.br/GINAPE/VIDA/alggenet.htm}, Accessed 18 August 2015.
+  \url{http://www.nce.ufrj.br/GINAPE/VIDA/alggenet.htm}, Accessed 18th August 2015.
 
 %38
 \bibitem{NarodytskaN}
-Narodytska, N., Bacchus, F. {``Maximum Satisfiability Using Core-Guided MAXSAT Resolution'', Proceedings of the Twenty-Eighth AAAI Conference on Artificial Intelligence.}
+Narodytska, N., Bacchus, F. (2014), {``Maximum Satisfiability Using Core-Guided MAXSAT Resolution},'' In: Proc. of the Twenty-Eighth AAAI Conference on Artificial Intelligence, pp. 2717--2723.
 
 %39
 \bibitem{Federica2008}
-Federica, P., Rodolfo, F., Yuqing , S., Elisa, B. (2008), {``Authorization and User Failure Resiliency for WS-BPEL business processes''}, Service-Oriented Computing – ICSOC 2008 Lecture Notes in Computer Science, 2008, Volume 5364, 116-131
+Federica, P., Rodolfo, F., Yuqing , S., Elisa, B. (2008), {``Authorization and User Failure Resiliency for WS-BPEL business processes''}, In: Service-Oriented Computing, LNCS 5364, pp. 116--131
 
 %40
 \bibitem{Barth1995}
@@ -873,7 +873,8 @@ Pseudo-Boolean Optimization.''}, Technical Report MPI-I-95-2-003, Max Plank Inst
 \bibitem{Patrick2015}Sebastiani, R., Trentin, T., {``OptiMathSAT: A Tool for Optimization Modulo Theories''}
 
 %43
-\bibitem{Cormem}Cormem, H., Charles, E., {``Algoritmos, Teoria e Prática''}, Chapter 34, Pag 763.
+\bibitem{Cormem}
+Cormen, T., Leiserson, C., Rivest, R., Stein, C. (2009), {``Introduction to Algorithms''}, MIT Press, pp. I-XIX, 1--1292.
 
 \end{thebibliography}
 
