review 7.2 Experimental Results

--- a/Docs/Paper/LaTex/template.tex
+++ b/Docs/Paper/LaTex/template.tex
@@ -569,7 +569,7 @@ In contrast to vZ, ILP solves $6$ out of $7$ benchmarks. When ILP produces a res
 
 Note that all ESBMC parallel versions produce better results than the sequential one. In particular, the ESBMC-PB implementation outperforms all other ESBMC approaches; the ESBMC-PB performance improves as the number of nodes and edges increase. One notable case is the clustering benchmark, when verified by ESBMC-PB, it executes $3$.$13$ times faster than ILP and $1$.$89$ times slower than vZ.
 
-\textcolor{red}{The PB version of esbmc described in Section 6.4, demonstrates a significant advance in tool; when the quantity of nodes is low, around 30, ESBMC-PB not shows efficiency in front of techniques used in vZ and ILP. however, around 150 nodes, ESBMC becomes 3 times more fast than ILP( the technique more robust in here). vZ using little quantity of nodes was 30 times more fast (CRC32) than ESBMC-PB and for intermediate nodes this value approximately falls to 1.9 (Clustering). When analysed the algorithms: RC6, Fuzzy and Mars, ESBMC-PB obtained TO or MO in all cases. The results are promising taking into consideration that vZ and Matlab tools are art states in their respective functions.}
+\textcolor{red}{The ESBMC-PB implementation described in Section~\ref{Multi-core-ESBMC-with-OpenMP-using-Binary-Search} shows a significant performance improvement; when the amount of nodes is around $30$, ESBMC-PB does not outperform the optimization techniques employed by vZ and ILP tools. However, when the amount of nodes is approximately $150$, ESBMC-PB becomes three times faster than ILP, which is the most robust technique. When vZ explores a small amount of nodes, it is typically $30$ times faster ({\it e.g.}, CRC$32$) than ESBMC-PB and for intermediate nodes (around $150$ nodes), this performance improvement decreases to $1$.$9$ ({\it e.g.}, Clustering). When analyzing all benchmarks: RC$6$, Fuzzy, and Mars, ESBMC-PB produces TO or MO; however, the results are still promising if we take into consideration that vZ and Matlab are state-of-the-art tools with respect to optimization problems.}
 
 The only technique that is able to solve all benchmarks is GA; however, its precision is not satisfactory since it produces an error rate between $-37.6$\% and $29.0$\%.
 
