--- a/Docs/Paper/LaTex/template.tex
+++ b/Docs/Paper/LaTex/template.tex
@@ -697,7 +697,7 @@ Finally, there is an issue about $150$ nodes problem, since it seems to be the l
 
 %1
 \bibitem{Arato2003}
-Arat\'o, P., Juh\'asz, S., Mann, Z.A., Orb\'an, A., Papp, D. (2003), ``{Hardware/software partitioning in embedded system design. In: Proc. of the Intl. Symposium of Intelligent Signal Processing},'' pp. 192--202.
+Arat\'o, P., Juh\'asz, S., Mann, Z.A., Orb\'an, A., Papp, D. (2003), ``{Hardware/software partitioning in embedded system design},'' In: Proc. of the Intl. Symp. of Intelligent Signal Processing, pp. 192--202.
 
 %2
 \bibitem{Mann2007}
@@ -741,11 +741,11 @@ Clarke, E., Kroening, D., Lerda, F. (2004), ``{A Tool for Checking ANSI-C Progra
 
 %12
 \bibitem{Armando2009}
-Armando, A., Mantovani, J., Platania, L. (2009), ``{Bounded model checking of software using SMT solvers instead of SAT solvers},'' In: International Journal on Software Tools for Technology Transfer, v. 11, n. 1, pp. 69--83.
+Armando, A., Mantovani, J., Platania, L. (2009), ``{Bounded model checking of software using SMT solvers instead of SAT solvers},'' In: Intl. Journal on Software Tools for Technology Transfer, v. 11, n. 1, pp. 69--83.
 
 %13
 \bibitem{Ganai2006}
-Ganai, M., Gupta, A. (2006), ``{Accelerating high-level bounded model checking},'' In: Proc. of the IEEE/ACM International Conference on Computer-Aided Design, pp. 794-–801.
+Ganai, M., Gupta, A. (2006), ``{Accelerating high-level bounded model checking},'' In: Proc. of the IEEE/ACM Intl. Conf. on Computer-Aided Design, pp. 794-–801.
 
 %14
 \bibitem{Cordeiro2012}
@@ -753,7 +753,7 @@ Cordeiro, L., Fischer, B., Marques-Silva, J. (2012), ``{SMT-based bounded model 
 
 %15
 \bibitem{Cordeiro2011}
-Cordeiro, L., Fischer, B. (2011), ``{Verifying multi-threaded software using SMT-based context-bounded model checking.},'' In: Proc. of the 33rd Intl Conf. on Software Engineering, pp. 331--340.
+Cordeiro, L., Fischer, B. (2011), ``{Verifying multi-threaded software using SMT-based context-bounded model checking.},'' In: Proc. of the Intl. Conf. on Software Engineering, pp. 331--340.
 
 %16
 \bibitem{Ramalho2013}
@@ -773,11 +773,11 @@ Tranquillo, J. (2011), ``{Matlab for Engineering and the Life Sciences}'', Synth
 
 %20
 \bibitem{Hong2010}
-Hong, L., Cai, J. (2010), ``{The application guide of mixed programming between MATLAB and other programming languages},'' In: Proc. of the 2nd Intl. Conference on Computer and Automation Engineering, pp. 185--189.
+Hong, L., Cai, J. (2010), ``{The application guide of mixed programming between MATLAB and other programming languages},'' In: Proc. of the Intl. Conf. on Computer and Automation Engineering, pp. 185--189.
 
 %21
 \bibitem{Guthaus2001}
-Guthaus, M., Ringenberg, J., Ernst, D., Austin, T., Mudge, T., Brown, R. (2001), ``{MiBench: a free, commercially representative embedded benchmark suite},'' In: Proc. of the IEEE 4th annual workshop on workload characterization, pp. 3--14.
+Guthaus, M., Ringenberg, J., Ernst, D., Austin, T., Mudge, T., Brown, R. (2001), ``{MiBench: a free, commercially representative embedded benchmark suite},'' In: Proc. of the annual workshop on workload characterization, pp. 3--14.
 
 %22
 \bibitem{Arato2005}
@@ -797,7 +797,7 @@ Brummayer, R., Biere, A. (2009), ``{Boolector: An Efficient SMT Solver for Bit-V
 
 %26
 \bibitem{Barrett2011}
-Barrett, C., Conway, C. Deters, M., Hadarean, L., Jovanovic, D., King, T., Reynolds, A., Tinelli, C. (2011), ``{CVC4},'' In: Proc. of the Computer-Aided Verification, LNCS 6806, pp. 171--177.
+Barrett, C., Conway, C. Deters, M., Hadarean, L., Jovanovic, D., King, T., Reynolds, A., Tinelli, C. (2011), ``{CVC4},'' In: Proc. of the Intl. Conf. on Computer-Aided Verification, LNCS 6806, pp. 171--177.
 
 %27
 \bibitem{Bozzano2005}
@@ -805,7 +805,7 @@ Bozzano, M., Bruttomesso, R., Cimatti, A., Junttila, T., Rossum, P., Schulz, S.,
 
 %28
 \bibitem{Dutertre2014}
-Dutertre, B. (2014), ``{Yices 2.2. In: Proc. of the Computer-Aided Verification (CAV)},'' LNCS 8559, pp. 737–-744.
+Dutertre, B. (2014), ``{Yices 2.2. In: Proc. of the Intl. Conf. on Computer-Aided Verification},'' LNCS 8559, pp. 737–-744.
 
 %29
 \bibitem{Holzmann2011}
@@ -813,7 +813,7 @@ Holzmann, G.J., Joshi, R., Groce, A. (2011), ``{Swarm Verification Techniques},'
 
 %30
 \bibitem{Holzmann2012}
-Holzmann, G. (2012), ``{Parallelizing the spin model checker. In: Proc. of the 19th Intl. Conf. on Model Checking Software},'' LNCS 7385, pp. 155--171.
+Holzmann, G. (2012), ``{Parallelizing the spin model checker. In: Proc. of the Intl. Symp. on Model Checking Software},'' LNCS 7385, pp. 155--171.
 
 %31
 \bibitem{Wintersteiger2009}
@@ -825,11 +825,11 @@ Bjorner, N., Phan, A-D., Fleckenstein, L. (2015), ``{$\nu$Z - An Optimizing SMT 
 
 %33
 \bibitem{Qawasmeh2014}
-Qawasmeh, A., Malik, A., Chapman, B. (2014), ``{OpenMP task scheduling analysis via OpenMP runtime API and tool visualization.},'' In: Proc. of the Intl. Parallel \& Distributed processing symposium workshop, pp. 1049--1058.
+Qawasmeh, A., Malik, A., Chapman, B. (2014), ``{OpenMP task scheduling analysis via OpenMP runtime API and tool visualization.},'' In: Proc. of the Intl. Symp. on Parallel \& Distributed processing, pp. 1049--1058.
 
 %34
 \bibitem{Bjorner2014}
-Bjorner, N. and Phan, A. D. (2014), ``{$\nu$Z - Maximal Satisfaction with Z3},'' In: Proc. of the 6th Intl. Symposium on Symbolic Computation in Software Science, pp. 1--10.
+Bjorner, N. and Phan, A. D. (2014), ``{$\nu$Z - Maximal Satisfaction with Z3},'' In: Proc. of the Intl. Symp. on Symbolic Computation in Software Science, pp. 1--10.
 
 %35
 \bibitem{OpenMP1998}
@@ -849,11 +849,11 @@ URFJ, ``{Algoritmos Genéticos: Fundamentos e Aplicações. Marcio Nunes de Mira
 
 %38
 \bibitem{NarodytskaN}
-Narodytska, N., Bacchus, F. (2014), {``Maximum Satisfiability Using Core-Guided MAXSAT Resolution},'' In: Proc. of the Twenty-Eighth AAAI Conference on Artificial Intelligence, pp. 2717--2723.
+Narodytska, N., Bacchus, F. (2014), {``Maximum Satisfiability Using Core-Guided MAXSAT Resolution},'' In: Proc. of the AAAI Conf. on Artificial Intelligence, pp. 2717--2723.
 
 %39
 \bibitem{Federica2008}
-Federica, P., Rodolfo, F., Yuqing , S., Elisa, B. (2008), {``Authorization and User Failure Resiliency for WS-BPEL business processes''}, In: Proc. of the Service-Oriented Computing, LNCS 5364, pp. 116--131
+Federica, P., Rodolfo, F., Yuqing , S., Elisa, B. (2008), {``Authorization and User Failure Resiliency for WS-BPEL business processes''}, In: Proc. of the Intl. Conf. on Service-Oriented Computing, LNCS 5364, pp. 116--131
 
 %40
 \bibitem{Barth1995}
@@ -870,7 +870,7 @@ Pavlinovic, Z., King, T., Wies, T. (2015),{``Practical SMT-Based Type Error Loca
 
 %43
 \bibitem{Patrick2015}
-Sebastiani, R., Trentin, T. (2015), {``OptiMathSAT: A Tool for Optimization Modulo Theories''}, In: Proc. of the Computer Aided Verification, LNCS 9206, pp. 447--454.
+Sebastiani, R., Trentin, T. (2015), {``OptiMathSAT: A Tool for Optimization Modulo Theories''}, In: Proc. of the Intl. Conf. on Computer Aided Verification, LNCS 9206, pp. 447--454.
 
 %43
 \bibitem{Cormem}
